--- a/config.template.toml
+++ b/config.template.toml
@@ -1,12 +1,36 @@
+# Determine whether to delete requestedkey from "source" redis 
+# on successful GET command
 DeleteOnGet = true
+
+# Determine whether to delete requested key from "source" redis 
+# on successful SET command
 DeleteOnSet = false
 
+# Client configuration for "source" redis
 [Source]
+
+# Redis address
 Addr = "redis-source:6379"
+
+# Connection pooling: determine how many maximum idle connections
+# to allow
 MaxIdleConns = 50
+
+# Connection pooling: determine how long a connection can be kept in
+# idle state before being closed. Format is based on golang ParseDuration
+# format: https://golang.org/pkg/time/#ParseDuration
 IdleTimeout = "30s"
 
+# Client configuration for "destination" redis
 [Destination]
+# Redis address
 Addr = "redis-destination:6379"
+
+# Connection pooling: determine how many maximum idle connections
+# to allow
 MaxIdleConns = 100
+
+# Connection pooling: determine how long a connection can be kept in
+# idle state before being closed. Format is based on golang ParseDuration
+# format: https://golang.org/pkg/time/#ParseDuration
 IdleTimeout = "45s"
