--- a/test/e2e/Makefile
+++ b/test/e2e/Makefile
@@ -1,11 +1,13 @@
 .PHONY: setup-virtual-env 
 setup-virtual-env:
 	python3 -m venv remiro-e2e-env
-	. remiro-e2e-env/bin/activate
-	pip install -r requirements.txt
+	source remiro-e2e-env/bin/activate; \
+	python --version; \
+	pip install -r requirements.txt;
 
 .PHONY: e2e-test
 e2e-test: setup-virtual-env
-	python e2e.py
+	source remiro-e2e-env/bin/activate; \
+	python e2e.py;
 
 .DEFAULT_GOAL := e2e-test
