--- a/config.template.toml
+++ b/config.template.toml
@@ -8,9 +8,11 @@ DeleteOnSet = false
 
 # Client configuration for "source" redis
 [Source]
-
 # Redis address
 Addr = "redis-source:6379"
+
+# Password to use when connecting to Redis server
+Password = "foobared"
 
 # Connection pooling: determine how many maximum idle connections
 # to allow
@@ -25,6 +27,9 @@ IdleTimeout = "30s"
 [Destination]
 # Redis address
 Addr = "redis-destination:6379"
+
+# Password to use when connecting to Redis server
+Password = "foobared"
 
 # Connection pooling: determine how many maximum idle connections
 # to allow
